--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
-version: "3"
+version: '3'
 services:
 
+
   webserver:
+    restart: on-failure
     build: .
     ports: 
-    - '8000:8080'
+      - '8000:8080'
 
 
   redis-server:
